<resources>
    <string name="app_name" translatable="false">mafqud</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hi_welcome_back" translatable="false">Hi, Welcome Back!👋</string>
    <string name="hello_message" translatable="false">اهلا بيكم في تطبيق منقذ,\n قم بالتسجيل للمساعدة في العثور علي المفقودين </string>
    <string name="email_address_text_view" translatable="false">Email Address</string>
    <string name="mafqud_gmail_com" translatable="false">اسم المستخدم</string>
    <string name="password_text_view" translatable="false">Password</string>
    <string name="enter_your_password" translatable="false"> كلمة المرور</string>
    <string name="password_login" translatable="false">كلمة المرور</string>
    <string name="remember_me" translatable="false">تذكرني</string>
    <string name="forget_password" translatable="false">نسيت كلمة المرور؟</string>
    <string name="login_button" translatable="false">تسجيل الدخول</string>
    <string name="or_login_with" translatable="false">Or Login with</string>
    <string name="facebook_login" translatable="false">  فيسبوك</string>
    <string name="google" translatable="false">  جوجول</string>
    <string name="don_t_have_account" translatable="false">ليس لديك حساب ؟</string>
    <string name="sign_up" translatable="false">تسجيل الدخول</string>
    <string name="create_account" translatable="false">إنشاء حساب</string>
    <string name="sign_up_button" translatable="false">Sign Up\n</string>
    <string name="sign_up_with" translatable="false">Sign up with</string>
    <string name="already_have_account" translatable="false">لديك حساب بالفعل ؟</string>
    <string name="login" translatable="false">تسجيل الدخول</string>
    <string name="home" translatable="false">home</string>
    <string name="announcement" translatable="false">announcement</string>
    <string name="map" translatable="false">map\n</string>
    <string name="more" translatable="false">more</string>
    <string name="ed_search" translatable="false">     Search</string>
    <string name="mafqoud_name" translatable="false">mafqoud_name</string>
    <string name="mafqoud_location" translatable="false">mafqoud_location</string>
    <string name="state" translatable="false">state</string>
    <string name="mafqoud_date" translatable="false">date</string>
    <string name="ReportAMissingPerson" translatable="false">ابلاغ عن مفقود</string>
    <string name="ReportFound" translatable="false">ابلاغ عن معثور عليه</string>
    <string name="reportMafqoud" translatable="false"> ابلاغ عن معثور عليه    </string>
    <string-array name="spinnerGender">Male,Female</string-array>
    <string name="insert_more_found" translatable="false">من فضلك قم بملئ أكبر عدد ممكن من بيانات الاستمارة لتساعدنا في سرعة الوصول إلى أهل المعثور عليه</string>
    <string name="dateOfFinding" translatable="false">تاريخ المعثور عليه</string>
    <string name="MafqoudDescription" translatable="false">مواصفات المفقود</string>
    <string name="name_example" translatable="false">مثل اسلام احمد</string>
    <string name="add_photo_button" translatable="false">add Photo</string>
    <string name="select_photo_from" translatable="false">select photo from</string>
    <string name="_more" translatable="false">More</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="_announcement" translatable="false">ابلاغ</string>
    <string name="_home" translatable="false">Home</string>
    <string name="how_to_use" translatable="false">طريقة استخدام الخاصية</string>
    <string name="guide_one_text" translatable="false">اولا عليك ان تملئ كل المعلومات الكافية عن المفقود لتسهيل الوصول اليه في صفحة المعلومات</string>
    <string name="next" translatable="false">next</string>
    <string name="guide_two_text" translatable="false">يمكنك بكل سهولة ان تستخدم الكاميرا مباشرة من التطبيق واخذ صورة للمفقود وهذه الخاصية تسهل علينا</string>
    <string name="finish" translatable="false">انهاء</string>
    <string name="guide_three_text" translatable="false">يمكنك استخدام الصور من المعرض في حالة وجود صور للمفقود فيها</string>
    <string name="add_photo" translatable="false">اضافة صورة</string>
    <string name="or_loginwith" translatable="false">او التسجيل باستخدام</string>
    <string name="create_account_sign_up" translatable="false">انشاء حساب جديد</string>
    <string name="hello_message_sign_up" translatable="false">أهلا بكم فى تطبيق منقذ ،\nقم بإنشاء حساب للمساعدة فى العثور على المفقودين</string>
    <string name="first_name" translatable="false">الاسم الاول</string>
    <string name="last_name" translatable="false">الاسم الاخير</string>
    <string name="phone_number" translatable="false">رقم الهاتف</string>
    <string name="confirm_your_password" translatable="false">إعادة تأكيد كلمة المرور</string>
    <string name="retry">retry</string>
    <string name="setting">الاعدادات</string>
    <string name="username">اسم المستخدم</string>
    <string name="email_edit">تعديل الايميل</string>
    <string name="add_data_text">Please enter the following data so that we can help you find the missing person</string>
    <string name="name" translatable="false">الاسم</string>
    <string name="mafqoud">mafqoud</string>
    <string name="day_text">day</string>
    <string name="year_text">year</string>
    <string name="age_text">mafqoud age</string>
    <string name="notification">الاشعارات</string>
    <string name="change_notification_icon">Change notifcation icon</string>
    <string name="first_person">الشخص الاول</string>
    <string name="matched_persons">Similar</string>
    <string name="matchedicon">matchedIcon</string>
    <string name="try_again">اعادة المحاولة</string>
    <string name="send">ارسال</string>
    <string name="condition">Principles and Conditions

Thank you for choosing our app dedicated to finding missing people using facial recognition technology. Before you proceed, please carefully read and acknowledge the following principles and conditions:

1. Privacy and Data Protection:
   - Our app values and respects user privacy. We adhere to strict data protection standards to ensure the confidentiality and security of personal information.
   - Facial recognition data collected will only be used for the purpose of locating missing individuals and will not be shared with any third parties without explicit consent.

2. Consent and Compliance:
   - By using this app, you acknowledge that you have the legal authority to search for missing persons and agree to comply with all applicable laws and regulations in your jurisdiction.
   - You understand that any misuse or unauthorized access to the app\'s features may result in legal consequences.

3. Responsible Usage:
   - The app\'s facial recognition technology is a powerful tool for locating missing people. However, it is crucial to use it responsibly and ethically.
   - You agree not to misuse the app or its features for any unlawful purposes, including but not limited to stalking, harassment, or invasion of privacy.

4. Accuracy and Limitations:
   - While our app utilizes advanced facial recognition algorithms, please note that no technology is 100% accurate.
   - Results obtained through the app should be considered as potential leads and should be verified and confirmed by authorized personnel or law enforcement agencies.

5. User Safety and Security:
   - The app is designed to facilitate the search for missing individuals. However, it is essential to prioritize personal safety and exercise caution when engaging in any related activities.
   - If you come across any sensitive information or have concerns about a particular case, please report it to the appropriate authorities.

By continuing to use this app, you indicate that you have read and understood the principles and conditions outlined above. You agree to abide by them and acknowledge that any violation may result in the termination of your access to the app.

Thank you for your commitment to helping find missing people and contributing to the betterment of society.</string>
    <string name="scraped">scraped</string>
</resources>