<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F7F7"
        tools:context=".ui.fragment.authUi.SignInFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hello_message"
            android:textColor="@color/gray_sign"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="44dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/plain_text_background"
            android:hint="@string/mafqud_gmail_com"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8sdp"
            android:text=""
            android:textAllCaps="false"
            android:textColorHint="#373737"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:autofillHints="password"
            android:background="@drawable/plain_text_background"
            android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
            android:gravity="right"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:text=""
            android:textAllCaps="false"
            android:textColorHint="#373737"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="290dp"
            android:buttonTint="@color/startColor"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/forget_password"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="40dp"
            android:background="@drawable/back_ground_buttons"
            android:enabled="true"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="27dp"
            android:background="#3E3E3E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <Button
            android:id="@+id/FaceBookLogin"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="46dp"
            android:background="@drawable/plain_text_background"
            android:drawableStart="@drawable/facebook_oval__1_"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/facebook_login"
            android:textAllCaps="false"
            android:textColor="#595959"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/googleLogin"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/plain_text_background"
            android:drawableStart="@drawable/google"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="#595959"
            app:layout_constraintBottom_toBottomOf="@+id/FaceBookLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/SignUP"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/SignUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:text="@string/don_t_have_account"
            android:textColor="#A0A0A0"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/FaceBookLogin"
            app:layout_constraintVertical_bias="0.383" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/or_loginwith"
            android:textColor="@color/gray_sign"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>