<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onBoarding.screens.GuideThreeFragment">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_80sdp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/select_photos"
             app:lottie_loop="true" />

        <TextView
            android:id="@+id/howToUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use"
            android:fontFamily="@font/tajawal_bold"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animation"/>

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_three_text"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/howToUse"/>

        <TextView
            android:id="@+id/finish"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/ed_style"
            android:gravity="center"
            android:text="@string/finish"
            android:layout_margin="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>